<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".BonangBarungActivity"
    android:background="@color/white">
    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/red"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="left"
            tools:ignore="RtlHardcoded">

            <LinearLayout
                android:id="@+id/btn_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables,UselessParent">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_action_switch"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/todo" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/laras"
                    android:textColor="@color/white"
                    android:fontFamily="@font/twinkle_dream"
                    android:textSize="30sp"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:id="@+id/tv_ricikan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bonang_barung"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:fontFamily="@font/twinkle_dream"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"/>
            <TextView
                android:id="@+id/tv_laras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pelog"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:fontFamily="@font/twinkle_dream"
                android:layout_gravity="center"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="right"
            tools:ignore="RtlHardcoded">
            <ImageView
                android:id="@+id/btn_home"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_action_home"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/todo" />
        </LinearLayout>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_below="@id/title"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="600dp"
            android:layout_height="200dp"
            android:layout_margin="50dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_bonang_barung_pelog"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <RelativeLayout
            android:id="@+id/bbp4hi"
            android:layout_width="64dp"
            android:layout_height="56dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.093"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.131">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4atas"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/kepatihan"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bbp4"
            android:layout_width="64dp"
            android:layout_height="56dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.914"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.569" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginStart="30dp"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/kepatihan"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bbp7"
            android:layout_width="64dp"
            android:layout_height="56dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.229"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.569">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginStart="25dp"
                android:layout_marginTop="17dp"
                android:fontFamily="@font/kepatihan"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bbp7hi"
            android:layout_width="64dp"
            android:layout_height="56dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.757"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.131">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7atas"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="19dp"
                android:fontFamily="@font/kepatihan"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/bbp6hi"
            android:layout_width="64dp"
            android:layout_height="56dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.229"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.131">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6atas"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/kepatihan"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bbp5hi"
            android:layout_width="64dp"
            android:layout_height="56dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.363"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.131" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5atas"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="19dp"
                android:fontFamily="@font/kepatihan"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bbp3hi"
            android:layout_width="64dp"
            android:layout_height="56dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.131" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3atas"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/kepatihan"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bbp2hi"
            android:layout_width="64dp"
            android:layout_height="56dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.625"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.131" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2atas"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginStart="32dp"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/kepatihan"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bbp1su"
            android:layout_width="64dp"
            android:layout_height="56dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.895"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.131" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1sup"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/kepatihan"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bbp1hi"
            android:layout_width="64dp"
            android:layout_height="56dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.074"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.569" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1atas"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/kepatihan"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bbp2"
            android:layout_width="64dp"
            android:layout_height="56dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.363"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.569" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginStart="24dp"
                android:layout_marginTop="21dp"
                android:fontFamily="@font/kepatihan"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bbp3"
            android:layout_width="64dp"
            android:layout_height="56dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.569" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="21dp"
                android:fontFamily="@font/kepatihan"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bbp5"
            android:layout_width="64dp"
            android:layout_height="56dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.638"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.569" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/kepatihan"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bbp6"
            android:layout_width="64dp"
            android:layout_height="56dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.776"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.569">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="21dp"
                android:fontFamily="@font/kepatihan"/>
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>