<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".KenongSlendroActivity"
    android:background="@color/white">
    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/red">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="left">

            <LinearLayout
                android:id="@+id/btn_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_action_switch"
                    android:layout_margin="5dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Laras"
                    android:textColor="@color/white"
                    android:fontFamily="@font/twinkle_dream"
                    android:textSize="30sp"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:id="@+id/tv_ricikan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kenong"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:fontFamily="@font/twinkle_dream"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"/>
            <TextView
                android:id="@+id/tv_laras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SLendro"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:fontFamily="@font/twinkle_dream"
                android:layout_gravity="center"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="right">
            <ImageView
                android:id="@+id/btn_home"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_action_home"
                android:layout_marginEnd="10dp"/>
        </LinearLayout>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_below="@id/title"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="480dp"
            android:layout_height="250dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_kenongslendro"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.495" />

        <RelativeLayout
            android:id="@+id/kenong2"
            android:layout_width="67dp"
            android:layout_height="59dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.026"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.675">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="26dp"
                android:fontFamily="@font/kepatihan"
                android:text="@string/_2"
                android:textSize="15sp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/kenong3"
            android:layout_width="67dp"
            android:layout_height="59dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.066"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/kepatihan"
                android:text="@string/_3"
                android:textSize="15sp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/kenong5"
            android:layout_width="67dp"
            android:layout_height="59dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.345"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/kepatihan"
                android:text="@string/_5"
                android:textSize="15sp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/kenong6"
            android:layout_width="67dp"
            android:layout_height="59dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.586"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/kepatihan"
                android:text="@string/_6"
                android:textSize="15sp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/kenong7"
            android:layout_width="67dp"
            android:layout_height="59dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.88"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.049">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/kepatihan"
                android:text="@string/_1atas"
                android:textSize="15sp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/kenong1hi"
            android:layout_width="67dp"
            android:layout_height="59dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.939"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.6">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="27dp"
                android:fontFamily="@font/kepatihan"
                android:text="@string/_2atas"
                android:textSize="15sp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/kethuk"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.66">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="34dp"
                android:text="@string/thuk"
                android:textSize="15sp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/kempyang"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.64"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.65">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="22dp"
                android:text="@string/pyang"
                android:textSize="15sp" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>